Mejor pausa y victoria/derrota

--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
   <!-- Contenedor del juego (overlay) -->
   <div id="game-container"></div>
   
-  <!-- Toggle del juego -->
-  <button id="game-toggle" class="game-toggle" title="Activar/Desactivar juego">
-    🎮
-  </button>
-  
   <!-- Botón de inicio del juego -->
   <button id="start-game-btn" class="start-game-btn hidden">
     🚀 Iniciar Juego
@@ -121,6 +116,9 @@
             </div>
 
             <div class="cta-buttons">
+              <button id="start-game-about" class="btn btn-game">
+                🎮 Jugar Minijuego
+              </button>
               <a href="#" class="btn btn-primary" data-page="portfolio">Ver Portfolio</a>
               <a href="#" class="btn btn-secondary" data-page="experience">Mi Experiencia</a>
             </div>
