solucion play no anda

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!-- Contenedor del juego (overlay) -->
   <div id="game-container"></div>
   
-  <!-- Botón de inicio del juego -->
-  <button id="start-game-btn" class="start-game-btn hidden">
+  <!-- Botón de inicio del juego (abajo en el medio) -->
+  <button id="start-game-btn" class="start-game-btn">
     🚀 Iniciar Juego
   </button>
 
@@ -116,9 +116,6 @@
             </div>
 
             <div class="cta-buttons">
-              <button id="start-game-about" class="btn btn-game">
-                🎮 Jugar Minijuego
-              </button>
               <a href="#" class="btn btn-primary" data-page="portfolio">Ver Portfolio</a>
               <a href="#" class="btn btn-secondary" data-page="experience">Mi Experiencia</a>
             </div>
