--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     /* Ocultar todo hasta que se cargue */
     body {
       opacity: 0;
-      overflow: hidden;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
     
     /* Pantalla de carga visible desde el inicio */
