--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
     🚀 Iniciar Juego
   </button>
 
+  <!-- Botón temporal para resetear progreso (solo desarrollo) -->
+  <button id="reset-progress-btn" class="reset-progress-btn" title="Restablecer todo el progreso">
+    🔄 Reset
+  </button>
+
   <!-- Badge de Space Commander (aparece al completar todo) -->
   <div id="space-commander-badge" class="space-commander-badge">
     <span>🚀</span>
@@ -785,7 +790,7 @@
           
           <!-- Formulario de contacto -->
           <div class="contact-form-container">
-            <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+            <form id="contact-form" class="contact-form" action="https://formspree.io/f/mqekaqlw" method="POST">
               <!-- Honeypot para anti-spam -->
               <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off">
               
